--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,10 @@ label {
 
 
 footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-color: #1e1e1e;
     color: #f5f5f5;
     text-align: center;
